--- a/index.html
+++ b/index.html
@@ -2,95 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <title>To Do List</title>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Mali:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
-      rel="stylesheet"
-    />
-
-    <link rel="stylesheet" href="css/style.css" />
+    <title>To-Do-List</title>
   </head>
-
   <body>
-    <h1>Personal To-Do List</h1>
-    <div id="topgridcontent">
-      <div id="taskinputcontainer">
-        <div class="inputteam">
-          <div class="input">
-            <input
-              id="textInput"
-              type="text"
-              placeholder="What's your activity?"
-              maxlength="32"
-            />
-          </div>
-          <div class="input">
-            <input id="dateInput" type="text" placeholder="When is it?" />
-          </div>
-        </div>
-        <button id="buttoninput" onclick="addTask()">List it up!</button>
-      </div>
-      <div id="login">
-        <h3 id="loginname">Hi... Who are you again?</h3>
-        <p class="login">
-          <a href="on-progress/login.html" id="logref">Click Here</a> to login
-          so we could remember you!
-        </p>
-      </div>
-    </div>
-    <div id="botgridcontent">
-      <div id="listcontainer">
-        <h3 id="todaylist">This month's list!</h3>
-        <hr class="listline" />
-        <div id="noTaskMessage">no Task this month, Friend!</div>
-        <ul id="taskList"></ul>
-      </div>
-      <div id="calendar">
-        <div class="header-calendar">
-          <button id="previous" onclick="previous()">&larr;</button>
-          <h3 id="monthandyear"></h3>
-          <button id="next" onclick="next()">&rarr;</button>
-        </div>
-        <hr class="listline" />
-        <table class="table-calendar" id="table-calendar" data-lang="en">
-          <thead id="thead-month"></thead>
-          <tbody id="calendar-body"></tbody>
-        </table>
-        <hr class="calendarline" />
-        <div class="footer-calendar">
-          <div class="selectmonth">
-            <label for="month">Month:</label>
-            <div class="month">
-              <select id="month" onchange="jump()">
-                <option value="0">Jan</option>
-                <option value="1">Feb</option>
-                <option value="2">Mar</option>
-                <option value="3">Apr</option>
-                <option value="4">May</option>
-                <option value="5">Jun</option>
-                <option value="6">Jul</option>
-                <option value="7">Aug</option>
-                <option value="8">Sep</option>
-                <option value="9">Oct</option>
-                <option value="10">Nov</option>
-                <option value="11">Dec</option>
-              </select>
-            </div>
-          </div>
-          <div class="selectyear">
-            <label for="year">Year:</label>
-            <div class="year">
-              <select id="year" onchange="jump()"></select>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <script src="js/script.js"></script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
